<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_icon_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_category_foreground"
            android:title="Categories" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/ic_home_foreground"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_entries"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/entries" />
        <item
            android:id="@+id/nav_goal"
            android:icon="@mipmap/ic_home_foreground"
            android:title="@string/Goals" />
    </group>
</menu>
