<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.comp231.mypam.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.comp231.mypam.ui.categories.CategoryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.comp231.mypam.ui.accounts.AccountFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_entries"
        android:name="com.comp231.mypam.ui.entries.EntriesFragment"
        android:label="@string/menu_entries"
        tools:layout="@layout/fragment_entries" />
</navigation>